@@ -94,6 +94,7 @@ Core - General
   - Add: When using {cms_render_scripts} adds the ability to put inline javascript into <script type="text/cms_javascript">...</script>
     tags that will be deferred loaded.
   - Fix lib/nls files so that UTF-8 locales are searched first.
+  - cms_admin_utils::get_icon() and {admin_icon} can now find plugins without specifying an extension.
 
 CMSContentManager - 1.2
   - Gets rid of secure options, flag output and bulk functionaltiy
